test/compile_errors/stage1/obj/wasmMemorySize_is_a_compile_error_in_non-Wasm_targets.zig
export fn foo() void {
    _ = @wasmMemorySize(0);
    return;
}

// wasmMemorySize is a compile error in non-Wasm targets
//
// tmp.zig:2:9: error: @wasmMemorySize is a wasm32 feature only
